# c-plus-plus

./: CMakeLists.txt  Makefile  README.md  base64.h  bitmap.hpp  build.sh  generate_ca.sh  main.cpp  rtsp_pull.sln  test_base64.cpp
ca/: ca.pem  dh.pem  server.pem
client/: CMakeLists.txt  client.cpp  main.cpp  websocket_client.cpp  websocket_client.h
coap_server/: CMakeLists.txt  test_client.sh
coap_server/include/coap2/: coap.h
coap_server/server/: CMakeLists.txt  CoapServer.cpp  CommDefines.h  Server.h  Session.h
conf/: acl  mosquitto.conf  passwd
conf/mqttCA/ca/: ca.crt  ca.key  ca.pub
conf/mqttCA/client/: client.crt  client.csr  client.srl
conf/openssl_generate/ca/: ca.crt  ca.key
conf/openssl_generate/certDER/: client.der
conf/openssl_generate/server/: server.key
ffmpeg/: ffmpeg.hpp  ffmpeg.vcxproj  ffmpeg.vcxproj.filters  main.cpp
ffmpeg/Debug/: ffmpeg.exe.recipe  vc142.idb  视频.lnk
ffmpeg/Debug/ffmpeg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ffmpeg/x64/Debug/: ffmpeg.exe.recipe  vc142.idb
ffmpeg/x64/Debug/ffmpeg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ffmpeg.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: semaphore.h
lib/: libcoap-2.la  libcoap-2.so.2.0.1  libjsoncpp.so.1.9.4  librdkafka++.so.1
libcoap/examples/: coap-server.c
libcoap/include/coap2/: resource.h
mqtt_broker/: CMakeLists.txt
mqtt_broker/conf/: mosquitto.conf.bak
mqtt_broker/conf/mqttCA/: shell.txt
mqtt_broker/conf/mqttCA/client/: client.key
mqtt_broker/conf/mqttCA/server/: server.crt  server.csr  server.key  server.srl
mqtt_broker/conf/openssl_generate/: generate.sh
mqtt_broker/conf/openssl_generate/certDER/: ca.der  server.der
mqtt_broker/conf/openssl_generate/client/: client.crt  client.key
mqtt_broker/conf/openssl_generate/server/: server.crt
mqtt_broker/lib/cpp/: libmosquittopp.so.1
mqtt_client/: CMakeLists.txt
mqtt_client/lib/: cmake_install.cmake  libmosquitto.so.1.6.12
mqtt_client/lib/cpp/: cmake_install.cmake  libmosquittopp.so.1.6.12
mqtt_client/mqtt_publish/: CMakeLists.txt  publish.cpp
mqtt_client/mqtt_subscribe/: CMakeLists.txt  Consumer.cpp  LogManager.h
opencv/: opencv.cpp  opencv.vcxproj
opencv/x64/Debug/: opencv.exe.recipe  vc142.idb
opencv/x64/Debug/opencv.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opencv.lastbuildstate
rtsp_pull/: main.cpp  md5.cpp  md5.h  rtsp_pull.vcxproj  rtsp_pull.vcxproj.filters
rtsp_pull/Debug/: rtsp_pull.exe.recipe  vc142.idb
rtsp_pull/Debug/rtsp_pull.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rtsp_pull.lastbuildstate
rtsp_pull/x64/Debug/: rtsp_pull.exe.recipe  vc142.idb
rtsp_pull/x64/Debug/rtsp_pull.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
server/: CMakeLists.txt  CoapServer.h  CoapSessionManager.h  GwTopics.h  MsgDefine.h  Semaphore.h  main.cpp  websocket_server.cpp  websocket_server.h
src/: CKafkaCb.cpp  CKafkaCb.h  CKafkaConsumer.cpp  CKafkaConsumer.h  CKafkaProducer.cpp  CKafkaProducer.h  KafkaConsumerTest.cpp  KafkaProducerTest.cpp  Log.h  Makefile
